Implemented home section

--- a/src/app/components/item/item.component.html
+++ b/src/app/components/item/item.component.html
@@ -1,1 +1,9 @@
-<p>item works!</p>
+<div class="card" style="padding:10px; margin-top:20px">
+  <img src="../../../assets/images/{{ item.image }}" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{ item.name }}</h5>
+    <p class="card-text">{{ item.description }}</p>
+    <p class="card-text"><strong>Price:</strong> {{ item.price | currency: 'Rs. ' }}</p>
+    <a href="#" class="btn btn-primary">Add to Cart</a>
+  </div>
+</div>
