--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,1 +1,20 @@
-<p>shop works!</p>
+<div class="container" style="padding-bottom: 20px;">
+    <div class="row justify-content-end" style="margin-top:20px">
+        <div class="col-md-1 text-md-right">
+            <label for="currencySelect" class="mr-2">Convert to:</label>
+        </div>
+        <div class="col-md-1">
+            <div class="form-group mb-0">
+                <select class="form-control text-center" id="currencySelect" [(ngModel)]="selectedCurrency">
+                    <option value="LKR">LKR</option>
+                    <option value="USD">USD</option>
+                </select>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div *ngFor="let item of items" class="col-md-3">
+            <app-item [item]="item"></app-item>
+        </div>
+    </div>
+</div>
