--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -1,5 +1,5 @@
-<div class="container" style="padding-bottom: 20px;">
-    <div class="row justify-content-end" style="margin-top:20px">
+<div class="container">
+    <div class="row justify-content-end">
         <div class="col-md-1 text-md-right">
             <label for="currencySelect" class="mr-2">Convert to:</label>
         </div>
