--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,5 @@
-<p>cart works!</p>
+<div class="container">
+    <h2>Shopping Cart</h2>
+    <app-cart-item [cartItems]="cartItems" (itemRemoved)="onItemRemoved($event)"></app-cart-item>
+    <div><strong>Total Price: {{ totalPrice | currency: selectedCurrency }}</strong></div>
+</div>
