--- a/src/app/components/cart-item/cart-item.component.html
+++ b/src/app/components/cart-item/cart-item.component.html
@@ -1,10 +1,10 @@
 <table class="table">
   <tbody>
-    <tr *ngFor="let item of cartItems">
+    <tr *ngFor="let item of cartItems; let i = index">
       <td><img [src]="'assets/images/' + item.image" alt="{{ item.name }}"></td>
       <td>{{ item.name }}</td>
-      <td>{{ item.price | currency: selectedCurrency }}</td>
-      <td><button class="btn btn-danger" (click)="removeFromCart(item)">Remove</button></td>
+      <td>{{ item.price*currencyData.fromLkr | currency: currencyData.selectedCurrency }}</td>
+      <td><button class="btn btn-danger" (click)="removeFromCart(i)">Remove</button></td>
     </tr>
   </tbody>
 </table>
