--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,16 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="/cart"><i class="fas fa-shopping-cart"></i></a>
         </li>
+        <li class="nav-item">
+          <select class="form-control text-center" id="currencySelect" [(ngModel)]="selectedCurrency"
+            (ngModelChange)="fetchExchangeRates()">
+            <option value="LKR">LKR</option>
+            <option value="USD">USD</option>
+            <option value="AUD">AUD</option>
+            <option value="EUR">EUR</option>
+            <option value="GBP">GBP</option>
+          </select>
+        </li>
       </ul>
     </div>
   </div>
