--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,3 +1,15 @@
 .navbar-dark .navbar-nav .nav-link svg {
     fill: #fff;
 }
+
+.navbar-nav {
+    margin-left: auto;
+}
+
+.navbar-nav li {
+    padding: 0 10px;
+}
+
+.navbar-nav li i {
+    font-size: 1.2rem;
+}
