--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,6 +1,11 @@
-<div class="container" *ngIf="currencyData">
+<div class="container" *ngIf="cartItems.length > 0 && currencyData">
     <h2>Shopping Cart</h2>
     <app-cart-item [cartItems]="cartItems" (itemRemoved)="onItemRemoved()"></app-cart-item>
     <div><strong>Total Price: {{ totalPrice*currencyData.fromLkr | currency: currencyData.selectedCurrency }}</strong>
     </div>
+</div>
+<div class="container" *ngIf="cartItems.length === 0">
+    <img src="../../../assets/images/empty-cart.jpg" alt="Empty cart image">
+    <h4>There is no item here.</h4>
+    <button class="btn btn-primary shop-button" routerLink="/">Shop Now</button>
 </div>
